Fix a bug in ConvictedReportToPersonInfoConverter where identityInfo is not set