@@ -19,6 +19,8 @@ run {
                 "--add-opens=javafx.controls/javafx.scene.control.skin=controlsfx",
                 "--add-opens=javafx.graphics/javafx.scene=controlsfx",
                 "--add-opens=java.base/java.util=org.apache.commons.lang3",
+                "--add-opens=java.base/java.lang=org.apache.commons.lang3",
+                "--add-opens=java.base/java.time=org.apache.commons.lang3",
                 "--add-opens=java.base/java.time.chrono=bw.core",
                 "--add-opens=javafx.controls/javafx.scene.control.skin=bw.core",
                 "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.scenicview.scenicview",
